src-tauri/build4-utf8.log
cargo :    Compiling genzo-kit v1.0.0 
(D:\learn\genzo-kit\src-tauri)
At line:1 char:1
+ cargo build > build4.log 2>&1; Get-Content build4.log 
| Out-File -Enc ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compili 
   ng ge...-kit\src-tauri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0433]: failed to resolve: use of unresolved 
module or unlinked crate `genzo_kit_lib`
 --> src\main.rs:5:5
  |
5 |     genzo_kit_lib::run();
  |     ^^^^^^^^^^^^^ use of unresolved module or 
unlinked crate `genzo_kit_lib`
  |
help: there is a crate or module with a similar name
  |
5 -     genzo_kit_lib::run();
5 +     genzo_kit::run();
  |

For more information about this error, try `rustc 
--explain E0433`.
error: could not compile `genzo-kit` (bin "genzo-kit") 
due to 1 previous error
